# wit-vtable

./: Cargo.toml  README.md  bindings.rs  events.wit  handler.wit  types.wit
guest/: Cargo.toml
guest/src/: main.rs
macro/: Cargo.toml
macro/src/: lib.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
src/: main.rs
