[package]
name = "wit-vtable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
env_logger = "0.9"
log = { version = "0.4", default-features = false }
tokio = { version = "1.4.0", features = ["full"] }
wasmtime = "0.35"
wasmtime-wasi = "0.35"
wasi-common = "0.35"
wasi-cap-std-sync = "0.35"
wit-bindgen-wasmtime = { git = "https://github.com/Mossaka/wit-bindgen", rev = "8252b0e39c7495f647ec0b0898721a7c641fc6c8" }
# wit-bindgen-gen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
# wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
# wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
# pmacro = { path = "macro" }


[workspace]
members = ["guest", "macro", "sdk"]
