[package]
edition = "2021"
name = "sdk"
version = "0.1.0"

[lib]
name = "sdk"

[dependencies]
anyhow = "1"
bytes = "1"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
wit-bindgen-gen-rust-wasm = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
wit-bindgen-gen-core = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "a79a4be33d76ddf62839ba71602c26a96610ef7c" }
pmacro = { path = "../macro" }
